hphp/test/quick/final_method2.php.expectf
HipHop Fatal error: Cannot override final method Foo::f() in %s on line 12
